.k8s/api-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: mythweaver-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: mythweaver-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mythweaver-api
  labels:
    app: mythweaver-api
spec:
  replicas: <MIN_REPLICAS>
  selector:
    matchLabels:
      app: mythweaver-api
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: mythweaver-api
    spec:
      containers:
        - name: mythweaver-api
          image: <IMAGE>
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 125m
              memory: 256Mi
            limits:
              cpu: 250m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /version
              port: 8000
