.k8s/marketing-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: mythweaver-marketing
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: mythweaver-marketing
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mythweaver-marketing
  labels:
    app: mythweaver-marketing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mythweaver-marketing
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: mythweaver-marketing
    spec:
      containers:
        - name: mythweaver-marketing
          image: <IMAGE>
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
            limits:
              cpu: 100m
