.k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: merlin-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: merlin-api
