.k8s/ui-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: mythweaver-ui
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: mythweaver-ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mythweaver-ui
  labels:
    app: mythweaver-ui
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mythweaver-ui
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: mythweaver-ui
    spec:
      containers:
        - name: mythweaver-ui
          image: <IMAGE>
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
            limits:
              cpu: 100m
