.k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: merlin-api
  labels:
    app: merlin-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: merlin-api
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: merlin-api
    spec:
      containers:
        - name: merlin-api
          image: <IMAGE>
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 100m
            limits:
              cpu: 100m
---
apiVersion: v1
kind: Service
metadata:
  name: merlin-service
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-size-unit: "2"
spec:
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8000
  selector:
    app: merlin-api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: merlin-ingress
spec:
  rules:
    - host: themerlin.app
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: merlin-service
                port:
                  number: 80
