.k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: merlin-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  defaultBackend:
    service:
      name: merlin-ui
      port:
        number: 80
  tls:
    - hosts:
        - merlinapp.ai
        - app.merlinapp.ai
        - api.merlinapp.ai
      secretName: merlin-tls
  rules:
    - host: "app.merlinapp.ai"
      http:
        paths:
          - pathType: Prefix
            path: "/(/|$)(.*)"
            backend:
              service:
                name: merlin-ui
                port:
                  number: 80
    - host: "api.merlinapp.ai"
      http:
        paths:
          - pathType: Prefix
            path: "/(/|$)(.*)"
            backend:
              service:
                name: merlin-api
                port:
                  number: 80
